--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Декоративная ковка</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" v-cloak></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
