Fix: visual, folders structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="./src/favicon/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Декоративная ковка</title>
+    <title>Интерьер-Сталь</title>
   </head>
   <body>
     <div id="app" v-cloak></div>
