Change page title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <link rel="icon" href="./src/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Интерьер-Сталь</title>
+    <title>Интерьер Cталь</title>
   </head>
   <body>
     <div id="app" v-cloak></div>
