--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
       name="description"
       content="Изготовление под заказ металлических каркасов, лестниц, изделий из металла в Беларуси. Честные цены, высокое качество, собственное производство."
     />
-
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./src/favicon/apple-touch-icon.png"
-    />
     <link
       rel="icon"
       type="image/png"
@@ -25,7 +19,7 @@
       sizes="16x16"
       href="./src/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/favicon/site.webmanifest" />
+    <link rel="manifest" href="./src/favicon/manifest.json" />
 
     <link rel="icon" href="./src/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
